# student_guider_chatbot

./: .env  Student_Guider_Chatbot_Documentation.docx  Student_Guider_Chatbot_Documentation.py  Student_Guider_Chatbot_Documentation_with_Diagrams.docx  app.py  chatbot_streamlit.py  database.py  insert_diagrams_to_docx.py  instructions.py  main.py  models.py  pyproject.toml  schemas.py  set_vector_store.py
chroma_db/: chroma.sqlite3
data/: text.docx
routers/: auth.py  auth_utils.py  chat.py  message.py
src/student_guider_chatbot/: __init__.py
tools/: google_search.py
